Add instructions to the Login page

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,6 +9,7 @@
   href="{{ url_for('static', filename='styling-css/loginAndRegister.css') }}"
 />
     <div class="login-heading"><h2>Local Community Board</h2>
+    <br><h4>Connecting neighborhoods together</h4>
     <br>
     <div class="login-container">
         <h2>Login</h2>
