--- a/app/static/styling-css/loginAndRegister.css
+++ b/app/static/styling-css/loginAndRegister.css
@@ -16,6 +16,14 @@ body {
     font-size: 35px;
     text-align: center;
     margin-top: 20px;
+    /* margin-bottom: 20px; */
+}
+
+.login-heading h4{
+    color: var(--main-color);
+    font-weight: bolder;
+    font-size: 20px;
+    text-align: center;
     margin-bottom: 20px;
 }
 
