--- a/app/templates/my-profile.html
+++ b/app/templates/my-profile.html
@@ -13,7 +13,7 @@
     <!-- upload account image -->
     <form action="{{ url_for('upload_avatar') }}" method="post" enctype="multipart/form-data">
       <input type="file" id="avatar_file" name="file" />
-      <a href="javascript:;" id="avatar_file_show">Upload a JPG</a>
+      <a href="javascript:;" id="avatar_file_show">Click here to upload a JPG</a>
       <input type="submit" class="submit-button" value="Upload" />
     </form>
   </div>
