--- a/app/templates/tag-requests.html
+++ b/app/templates/tag-requests.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block content %}
+<!-- Display requests with the same tag -->
 <link
   rel="stylesheet"
   href="{{ url_for('static', filename='styling-css/home-page.css') }}"
