--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,4 @@
+<!-- base teamplate for all the pages except log-in and register -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -37,19 +38,13 @@
         <div class="fa-solid fa-xmark" id="cancel-button"></div>
         <div class="profile-content">
           <div><h3>{{ current_user.user_name }}</h3></div>
-          <div><img
-            src="/static/user-account-image/{{current_user.avatar_filename}}"
-            alt="User Avatar"
-            /></div>
-        </div>          
-          <!-- user id is too personal too display -->
-          <!-- <p>User Id</p>  -->
-          <!-- <div></div><img
-            src="/static/user-account-image/{{current_user.avatar_filename}}"
-            alt="User Avatar"
-          />
-        </div> -->
-        <!-- <div class="fa-solid fa-user-large" id="profile"></div> -->
+          <div>
+            <img
+              src="/static/user-account-image/{{current_user.avatar_filename}}"
+              alt="User Avatar"
+            />
+          </div>
+        </div>
         <div class="user-button">
           <button class="profile-buttons" type="button">
             <a href="{{ url_for('myProfile') }}">My profile</a>
@@ -70,8 +65,6 @@
     <div class="sidebar">
       <a href="{{ url_for('index') }}" class="active">Home</a>
       <a href="{{ url_for('CreateRequest') }}">Create Request</a>
-      <!-- View request should only be called when a specific request is specified, for now I have made the request the first request. -->
-      <!-- <a href="{{ url_for('ViewRequest',request_id=1) }}">View Request</a> -->
     </div>
     {% block content %}{% endblock %}
   </body>
