--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} 
 {% block content %}
+<!-- home page -->
 <link
   rel="stylesheet"
   href="{{ url_for('static', filename='styling-css/home-page.css') }}"
@@ -34,47 +35,4 @@
   {% endfor %}
   </div>
 </div>
-
-      <!-- <svg
-        stroke-width="2"
-        stroke="currentColor"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http:svg"
-        class="swap-on"
-      >
-        <path
-          d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-          stroke-linejoin="round"
-          stroke-linecap="round"
-        ></path>
-      </svg>
-      <svg
-        stroke-width="2"
-        stroke="currentColor"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http:svg"
-        class="swap-off"
-      >
-        <path
-          d="M10 19l-7-7m0 0l7-7m-7 7h18"
-          stroke-linejoin="round"
-          stroke-linecap="round"
-        ></path>
-      </svg>
-    </div>
-    <button type="reset" class="close-btn">
-      <svg viewBox="0 0 20 20" class="h-5 w-5" xmlns="http:svg">
-        <path
-          clip-rule="evenodd"
-          d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-          fill-rule="evenodd"
-        ></path>
-      </svg>
-    </button>
-  </label>
-  <button type="submit">Search</button>
-</form> -->
-
 {% endblock %}
