--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,47 +1,49 @@
 {% block content %}
 <!-- Linked the styling sheets -->
+<!-- introductory view describing the context and purpose of the application, and allowing the user to create an account or log in. -->
 <link
   rel="stylesheet"
   href="{{ url_for('static', filename='styling-css/common-elements-style.css') }}"
 />
-<link 
-  rel="stylesheet" 
+<link
+  rel="stylesheet"
   href="{{ url_for('static', filename='styling-css/loginAndRegister.css') }}"
 />
-    <div class="login-heading"><h2>Local Community Board</h2>
-    <br><h4>Connecting neighborhoods together</h4>
-    <br>
-    <div class="login-container">
-        <h2>Login</h2>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
-        <form class="login-form" method="post" action="/login">
-            {{ form.hidden_tag() }}
-            {{ form.email.label }}
-            <br>
-            {{ form.email}}
-            <br>
-            {% for error in form.email.errors %}
-                <span>{{ error }}</span>
-            {% endfor %}
-            <br>
-            {{ form.password.label }}
-            <br>
-            {{ form.password }}
-            {% for error in form.password.errors %}
-                <span>{{ error }}</span>
-            {% endfor %}
-            <br>
-            {{ form.submit() }}
-        </form>
-        <a class="register-link" href="./register">Don't have an account? Register one now!</a>
-    </div>
+<div class="login-heading">
+  <h2>Local Community Board</h2>
+  <br />
+  <h4>Connecting neighborhoods together</h4>
+  <br />
+  <div class="login-container">
+    <h2>Login</h2>
+    {% with messages = get_flashed_messages() %} {% if messages %}
+    <ul>
+      {% for message in messages %}
+      <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %} {% endwith %}
+    <form class="login-form" method="post" action="/login">
+      {{ form.hidden_tag() }} {{ form.email.label }}
+      <br />
+      {{ form.email}}
+      <br />
+      {% for error in form.email.errors %}
+      <span>{{ error }}</span>
+      {% endfor %}
+      <br />
+      {{ form.password.label }}
+      <br />
+      {{ form.password }} {% for error in form.password.errors %}
+      <span>{{ error }}</span>
+      {% endfor %}
+      <br />
+      {{ form.submit() }}
+    </form>
+    <a class="register-link" href="./register"
+      >Don't have an account? Register one now!</a
+    >
+  </div>
 
-{% endblock %}
+  {% endblock %}
+</div>
