--- a/app/templates/my-profile.html
+++ b/app/templates/my-profile.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block content %}
+<!-- My profile page displaying personal information, posted requests and responses -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='styling-css/my-profile.css') }}" />
 <script src="{{ url_for('static', filename='my-profile.js') }}"></script>
