--- a/app/templates/view-request.html
+++ b/app/templates/view-request.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block content %}
+<!-- View requests page-->
 <!-- Linked the styling sheets -->
 <link
   rel="stylesheet"
@@ -51,35 +52,34 @@
   <div class="response-content" id="responseForm">
     <!-- The respond to request section has a field to enter response and submit and back buttons -->
     <form
-    action="{{ url_for('ViewRequest', request_id=request.request_id) }}"
-    method="post"
+      action="{{ url_for('ViewRequest', request_id=request.request_id) }}"
+      method="post"
     >
-    <textarea
-    placeholder="Enter your response here..."
-    id="response"
-    name="response"
-    required
-    ></textarea>
-    <div class="response-buttons">
-      <button class="submit-button" type="submit">Submit</button>
-      <button class="back-button" type="button" onclick="hideResponseForm()">
-        Back
-      </button>
-    </div>
-  </form>
-</div>
-<h3>Responses:</h3>
-<ul>
-  {% for response in request.response %}
-  <li>
-    <div class="Responses">
-      <strong>User:</strong>{{response.contributor.user_name}}
-      <p>{{ response.response_content }}</p>
-    </div>
-    
-  </li>
-  {% endfor %}
-</ul>
+      <textarea
+        placeholder="Enter your response here..."
+        id="response"
+        name="response"
+        required
+      ></textarea>
+      <div class="response-buttons">
+        <button class="submit-button" type="submit">Submit</button>
+        <button class="back-button" type="button" onclick="hideResponseForm()">
+          Back
+        </button>
+      </div>
+    </form>
+  </div>
+  <h3>Responses:</h3>
+  <ul>
+    {% for response in request.response %}
+    <li>
+      <div class="Responses">
+        <strong>User:</strong>{{response.contributor.user_name}}
+        <p>{{ response.response_content }}</p>
+      </div>
+    </li>
+    {% endfor %}
+  </ul>
 </div>
 
 {% endblock %}
