--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,7 +19,7 @@
     {% with messages = get_flashed_messages() %} {% if messages %}
     <ul>
       {% for message in messages %}
-      <li>{{ message }}</li>
+      <li id="error-message">{{ message }}</li>
       {% endfor %}
     </ul>
     {% endif %} {% endwith %}
