--- a/app/templates/my-profile.html
+++ b/app/templates/my-profile.html
@@ -12,7 +12,7 @@
       <img src="{{user_image}}" alt="User Avatar" />
     </div>
     <!-- upload account image -->
-    <form action="{{ url_for('upload_avatar') }}" method="post" enctype="multipart/form-data">
+    <form action="{{ url_for('main.upload_avatar') }}" method="post" enctype="multipart/form-data">
       <input type="file" id="avatar_file" name="file" />
       <a href="javascript:;" id="avatar_file_show">Click here to upload a JPG</a>
       <input type="submit" class="submit-button" value="Upload" />
@@ -22,7 +22,7 @@
   <button type="button" class="collapsible">Change User Name >></button>
   <div class='content'>
     <p>Name: {{ user.user_name }}</p>
-    <form action="{{ url_for('update_user') }}" method="post">
+    <form action="{{ url_for('main.update_user') }}" method="post">
       <label for="username">Change User Name:</label>
       <input type="text" id="username" name="username" value="{{ user.user_name }}" required />
       <button class="submit-button" type="submit">Change</button>
@@ -33,7 +33,7 @@
   <div class="content">
     <h2>Change Password</h2>
 
-    <form action="{{ url_for('update_password') }}" method="post" enctype="multipart/form-data">
+    <form action="{{ url_for('main.update_password') }}" method="post" enctype="multipart/form-data">
       <div class="changePassword_msg">
       </div>
       <div class="CPass_input">
@@ -57,11 +57,11 @@
     <ul>
       {% for post in posts %}
       <li>
-        <a href="{{ url_for('ViewRequest', request_id=post.request_id) }}">{{ post.request_title }}
+        <a href="{{ url_for('main.ViewRequest', request_id=post.request_id) }}">{{ post.request_title }}
         </a>
         - {{ post.date_posted }}
       </li>
-      <form action="{{ url_for('delete_post', post_id=post.request_id) }}" method="post">
+      <form action="{{ url_for('main.delete_post', post_id=post.request_id) }}" method="post">
         <button class="submit-button" type="submit">Delete</button>
       </form>
       {% endfor %}
@@ -76,11 +76,11 @@
         <p>{{ response.response_content }} - {{ response.date_responded }}</p>
         <p>
           For the request:
-          <a href="{{ url_for('ViewRequest', request_id=response.response.request_id) }}">{{
+          <a href="{{ url_for('main.ViewRequest', request_id=response.response.request_id) }}">{{
             response.response.request_title }}
           </a>
         </p>
-        <form action="{{ url_for('delete_response', response_id=response.response_id) }}" method="post">
+        <form action="{{ url_for('main.delete_response', response_id=response.response_id) }}" method="post">
           <button class="submit-button" type="submit">Delete</button>
         </form>
       </li>
