--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -10,7 +10,7 @@
     {% for result in results %}
     <div class="post">
       <h2>{{ result.author.user_name }}</h2>
-      <a href="{{ url_for('ViewRequest', request_id=result.request_id) }}"
+      <a href="{{ url_for('main.ViewRequest', request_id=result.request_id) }}"
         >{{ result.request_title }}</a
       >
       <p>{{ result.request_content }}</p>
